--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 				<img src="build/images/bell.png">
 			</div>
 		</div>
-		<div class="header_right">
+		<div class="header-content_right">
 			<div class="mobile-nav">
 				<div class="mobile-nav__item">
 					<img src="build/images/search-mobile.png">
@@ -47,7 +47,7 @@
 		</div>
 	</header>
 	<section class="main">
-		<div class="sidebar">
+		<nav class="sidebar">
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
@@ -127,7 +127,7 @@
 				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
-		</div>
+		</nav>
 		<div class="content content_full">
 			<div class="gallery-small">
 				<div class="gallery-header">
@@ -137,8 +137,8 @@
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
-							<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
-							<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
+							<span class="gallery-navigation__item"><img src="build/images/left.png"></span>
+							<span class="gallery-navigation__item"><img src="build/images/right.png"></span>
 						</div>						
 					</div>
 				</div>
@@ -233,8 +233,8 @@
 				<div class="gallery-header">
 					<h4 class="gallery-header__title">Recommended</h4>
 					<div class="gallery-navigation">
-						<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
-						<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
+						<span class="gallery-navigation__item"><img src="build/images/left.png"></span>
+						<span class="gallery-navigation__item"><img src="build/images/right.png"></span>
 					</div>
 				</div>
 				<div class="gallery-medium__wrapper">
@@ -298,8 +298,8 @@
 					<div class="gallery-header_right">
 						<a class="button-regular">Subscribe 2.3m</a>
 						<div class="gallery-navigation">
-							<a class="gallery-navigation__item" href=""><img src="build/images/left.png"></a>
-							<a class="gallery-navigation__item" href=""><img src="build/images/right.png"></a>
+							<span class="gallery-navigation__item" href=""><img src="build/images/left.png"></span>
+							<span class="gallery-navigation__item" href=""><img src="build/images/right.png"></span>
 						</div>						
 					</div>
 				</div>
