--- a/video.html
+++ b/video.html
@@ -112,23 +112,23 @@
 				<div class="videoplayer-navigation">
 					<span class="videoplayer-navigation__text">123K views</span>
 					<div class="videoplayer-navigation__wrapper">
-						<div class="videoplayer-navigation__buttons videoplayer-buttons">
-							<a class="videoplayer-buttons__item video-button" href="">
+						<nav class="videoplayer-navigation__buttons videoplayer-buttons">
+							<span class="videoplayer-buttons__item video-button">
 								<img class="video-button__icon" src="build/images/thumb-up.png">
 								<span class="video-button__text">123k</span>
-							</a>
-							<a class="videoplayer-buttons__item video-button" href="">
+							</span>
+							<span class="videoplayer-buttons__item video-button">
 								<img class="video-button__icon" src="build/images/thumb-down.png">
 								<span class="video-button__text">435k</span>
-							</a>
-							<a class="videoplayer-buttons__item video-button" href="">
+							</span>
+							<span class="videoplayer-buttons__item video-button">
 								<img class="video-button__icon" src="build/images/share.png">
 								<span class="video-button__text">Share</span>
-							</a>												
-						</div>
-						<a class="videoplayer-more" href="">
+							</span>												
+						</nav>
+						<span class="videoplayer-more">
 							<img src="build/images/more.png">
-						</a>						
+						</span>						
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 						<span class="videoplayer-description__more">Show more</span>
 					</div>
 				</div>
-				<a class="videoplayer-button" href="">Subscribe <span class="videoplayer-button__count">2.3m</span></a>				
+				<div class="videoplayer-button">Subscribe <span class="videoplayer-button__count">2.3m</span></div>				
 			</div>
 		</div>
 		<div class="videoplayer__playlist videoplayer-playlist">
