Added alt attribute to images for accessibility

--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
 			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="build/images/ybutton.png">
-			<img class="logo-youtube" src="build/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
+			<img class="logo-youtube" src="build/images/Youtube.png" alt="Youtube logo">
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
@@ -98,27 +98,27 @@
 				<div class="sidebar__subscriptions subscriptions">
 					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
 				</div>									
@@ -132,7 +132,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image" src="build/images/header-profile.png">
+						<img class="gallery-header__image" src="build/images/header-profile.png" alt="Profile picture">
 						<h4 class="gallery-header__title">Dollie Blair</h4>					
 					</div>
 					<div class="gallery-header_right">
@@ -145,7 +145,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-1.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -159,7 +159,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-2.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Gallery image">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -173,7 +173,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-3.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Gallery image">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -187,7 +187,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-4.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-4.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -201,7 +201,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-5.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-5.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -215,7 +215,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-6.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-6.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -240,7 +240,7 @@
 				<div class="gallery-medium__wrapper">
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-1.png">
+							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Gallery image">
 							<span class="gallery-medium__duration">3.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -256,7 +256,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-2.png">
+							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Gallery image">
 							<span class="gallery-medium__duration">2.40</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -272,7 +272,7 @@
 					</div>
 					<div class="gallery-medium__item medium-item">
 						<div class="gallery-medium__thumbnail">
-							<img class="gallery-medium__image" src="build/images/medium-3.png">
+							<img class="gallery-medium__image" src="build/images/medium-3.png" alt="Gallery image">
 							<span class="gallery-medium__duration">2.12</span>
 						</div>
 						<div class="gallery-medium__description">
@@ -291,7 +291,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image gallery-img_small" src="build/images/videoplayer-img.png">
+						<img class="gallery-header__image gallery-img_small" src="build/images/videoplayer-img.png" alt="Gallery image">
 						<h4 class="gallery-header__title">Food & drink</h4>
 						<p class="gallery-header__text">Recommended channel for you</p>						
 					</div>
@@ -306,7 +306,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-12.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-12.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -320,7 +320,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-11.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Gallery image">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -334,7 +334,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-10.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Gallery image">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -348,7 +348,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-9.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-9.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -362,7 +362,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-8.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-8.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -376,7 +376,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/slider/slider-7.png">
+							<img class="gallery-small__image" src="build/images/slider/slider-7.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
