--- a/video.html
+++ b/video.html
@@ -16,8 +16,8 @@
 			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="build/images/ybutton.png">
-			<img class="logo-youtube" src="build/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
+			<img class="logo-youtube" src="build/images/Youtube.png" alt="Youtube logo">
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
@@ -50,7 +50,7 @@
 	<section class="videoplayer">
 		<div class="videoplayer__main videoplayer-main">
 			<div class="videoplayer-main__image videoplayer-img">
-				<img class="videoplayer-img__item" src="build/images/player.png">
+				<img class="videoplayer-img__item" src="build/images/player.png" alt="Videoplayer image">
 				<div class="videoplayer__navigation videoplayer-navigation">
 					<div class="videoplayer-navigation__time videoplayer-time">
 						<span class="videoplayer-time__item"> 
@@ -135,7 +135,7 @@
 			<div class="videoplayer-summary">
 				<div class="videoplayer-description">
 					<div class="videoplayer-description__thumbnail">
-						<img class="videoplayer-description__image" src="build/images/videoplayer-img.png">
+						<img class="videoplayer-description__image" src="build/images/videoplayer-img.png" alt="Channel icon image">
 					</div>
 					<div class="videoplayer-description__text">
 						<h5 class="videoplayer-description__category">Food & Drink</h5>
@@ -161,7 +161,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-1.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Playlist image 1">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -171,7 +171,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-2.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="Playlist image 2">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -181,7 +181,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-3.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-3.png" alt="Playlist image 1">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
@@ -191,7 +191,7 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
-					<img class="playlist-image__item" src="build/images/video/playlist-4.png">
+					<img class="playlist-image__item" src="build/images/video/playlist-4.png" alt="Playlist image 1">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
