--- a/channel.html
+++ b/channel.html
@@ -16,8 +16,8 @@
 			<img src="build/images/burger.png">
 		</div>
 		<div class="logo">
-			<img class="logo-button" src="build/images/ybutton.png">
-			<img class="logo-youtube" src="build/images/Youtube.png">
+			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
+			<img class="logo-youtube" src="build/images/Youtube.png" alt="Youtube logo">
 			<span class="mobile-title">Margaret Phelps</span>	
 		</div>	
 		<div class="mobile-nav">
@@ -100,30 +100,30 @@
 				<div class="sidebar__subscriptions subscriptions">
 					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-1.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-2.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-3.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-4.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-5.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png">
+						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
-				</div>									
+				</div>										
 			</div>
 			<div class="sidebar__settings sidebar-settings">
 				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
@@ -132,12 +132,12 @@
 		</nav>
 		<div class="content content_full">
 			<div class="content-top">
-				<img class="content-top__image" src="build/images/channel-bg.png">
+				<img class="content-top__image" src="build/images/channel-bg.png" alt="Channel top image">
 			</div>
 			<div class="content__header content-header">
 				<div class="content-header__info content-info">
 					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="build/images/profile.png">
+						<img class="info-userpic__image" src="build/images/profile.png" alt="Profile picture">
 					</div>
 					<div class="content-info__description info-description">
 						<h6 class="info-description__title">Margaret Phelps</h6>
@@ -165,7 +165,7 @@
 					</nav>
 					<div class="content-player player">
 						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="build/images/channel-video.png">
+							<img class="player-image__pic" src="build/images/channel-video.png" alt="Channel main image">
 							<span class="player-image__time"></span>
 						</div>
 						<div class="content-player__description player-description">
@@ -178,15 +178,15 @@
 				<nav class="content-main__recommended recommended">
 					<h6 class="recommended__title">Recommended channels</h6>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="build/images/recommended/medium-1.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-1.png" class="Recommended item picture">
 						<p class="recommended-item__name">Flora Benson</p>
 					</div>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="build/images/recommended/medium-2.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-2.png" class="Recommended item picture">
 						<p class="recommended-item__name">Violet Cobb</p>
 					</div>
 					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="build/images/recommended/medium-3.png">
+						<img class="recommended-item__image" src="build/images/recommended/medium-3.png" class="Recommended item picture">
 						<p class="recommended-item__name">Philip Mulins</p>
 					</div>										
 				</nav>
@@ -206,7 +206,7 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-1.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -220,7 +220,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-2.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Gallery image">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
@@ -234,7 +234,7 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-3.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Gallery image">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
@@ -248,7 +248,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-4.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-4.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -262,7 +262,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-5.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-5.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -276,7 +276,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="build/images/channel/channel-6.png">
+							<img class="gallery-small__image" src="build/images/channel/channel-6.png" alt="Gallery image">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -291,7 +291,6 @@
 				</div>																				
 			</div>
 		</div>
-
 	</section>
 	<footer></footer>
 	<script src="build/js/script.js"></script>
