Implemented scroll functionalities in galleries

--- a/channel.html
+++ b/channel.html
@@ -287,7 +287,49 @@
 								<span class="small-item__date">Food & Drink</span>
 							</div>
 						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/channel/channel-1.png" alt="Gallery image">
+							<span class="gallery-small__duration">7:36</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Astronomy Or Astrology</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">34K views</span>
+								<span class="small-item__date">5 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/channel/channel-2.png" alt="Gallery image">
+							<span class="gallery-small__duration">2:19</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Advertising Outdoors</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">13k views</span>
+								<span class="small-item__date">15 days ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
 					</div>					
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/channel/channel-3.png" alt="Gallery image">
+							<span class="gallery-small__duration">9:05</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Radio Astronomy</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">1k views</span>
+								<span class="small-item__date">11 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>										
 				</div>																				
 			</div>
 		</div>
