--- a/home.html
+++ b/home.html
@@ -226,7 +226,49 @@
 								<span class="small-item__date">Food & Drink</span>
 							</div>
 						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-1.png" alt="Gallery image">
+							<span class="gallery-small__duration">7:36</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">A Brief History Of Creation</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">34K views</span>
+								<span class="small-item__date">5 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-2.png" alt="Gallery image">
+							<span class="gallery-small__duration">2:19</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Selecting The Right Hotel</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">13k views</span>
+								<span class="small-item__date">15 days ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
 					</div>					
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-3.png" alt="Gallery image">
+							<span class="gallery-small__duration">9:05</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Asteroids</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">1k views</span>
+								<span class="small-item__date">11 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>										
 				</div>																			
 			</div>				
 			<div class="gallery-medium">
@@ -285,7 +327,39 @@
 								<span class="medium-item__name">Dollie </span>
 							</div>
 						</div>
-					</div>										
+					</div>
+					<div class="gallery-medium__item medium-item">
+						<div class="gallery-medium__thumbnail">
+							<img class="gallery-medium__image" src="build/images/medium-1.png" alt="Gallery image">
+							<span class="gallery-medium__duration">3.40</span>
+						</div>
+						<div class="gallery-medium__description">
+							<h6 class="medium-item__title">Dude You Re Getting A Telescope</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">34K views</span>
+									<span class="medium-item__date">5 months ago</span>									
+								</p>
+								<span class="medium-item__name">Gussie French</span>
+							</div>
+						</div>
+					</div>
+					<div class="gallery-medium__item medium-item">
+						<div class="gallery-medium__thumbnail">
+							<img class="gallery-medium__image" src="build/images/medium-2.png" alt="Gallery image">
+							<span class="gallery-medium__duration">2.40</span>
+						</div>
+						<div class="gallery-medium__description">
+							<h6 class="medium-item__title">Moon Gazing</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">54K views</span>
+									<span class="medium-item__date">11 months ago</span>									
+								</p>
+								<span class="medium-item__name">Edward Osbourne</span>
+							</div>
+						</div>
+					</div>															
 				</div>
 			</div>
 			<div class="gallery-small">
@@ -387,7 +461,49 @@
 								<span class="small-item__date">Food & Drink</span>
 							</div>
 						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-12.png" alt="Gallery image">
+							<span class="gallery-small__duration">7:36</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Astronomy Or Astrology</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">34K views</span>
+								<span class="small-item__date">5 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-11.png" alt="Gallery image">
+							<span class="gallery-small__duration">2:19</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Advertising outdoors</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">13k views</span>
+								<span class="small-item__date">15 days ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
 					</div>					
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="build/images/slider/slider-10.png" alt="Gallery image">
+							<span class="gallery-small__duration">9:05</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Radio astronomy</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">1k views</span>
+								<span class="small-item__date">11 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>										
 				</div>																			
 			</div>
 		</div>
