--- a/channel.html
+++ b/channel.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="header header-channel">
 		<div class="menu">
-			<img src="build/images/burger.png">
+			<img src="build/images/burger.png" srcset="build/images/menu.svg">
 		</div>
 		<div class="logo">
 			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
@@ -30,18 +30,18 @@
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="build/images/search.png">
+			<div class="search-icon__wrap"></div>
 		</div>
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="build/images/camera.png">
+				<img src="build/images/camera.png" srcset="build/images/phone.svg">
 			</div>
 			<div class="top-navigation__item">
-				<img src="build/images/dots.png">
+				<img src="build/images/dots.png" srcset="build/images/combined.svg">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="build/images/bell.png">
+				<img src="build/images/bell.png" srcset="build/images/bell.svg">
 			</div>
 		</div>
 		<div class="top-userpic">
@@ -53,43 +53,43 @@
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
-						<img class="categories-item__image" src="build/images/sidebar/home.png">
+						<img class="categories-item__image" src="build/images/sidebar/home.png" srcset="build/images/sidebar/home.svg">
 						<p class="categories-item__text">Home</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/trending.png">
+						<img class="categories-item__image" src="build/images/sidebar/trending.png" srcset="build/images/sidebar/trending.svg">
 						<p class="categories-item__text">Trending</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png">
+						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png" srcset="build/images/sidebar/subscriptions.svg">
 						<p class="categories-item__text">Subscriptions</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/library.png">
+						<img class="categories-item__image" src="build/images/sidebar/library.png" srcset="build/images/sidebar/library.svg">
 						<p class="categories-item__text">Library</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/history.png">
+						<img class="categories-item__image" src="build/images/sidebar/history.png" srcset="build/images/sidebar/history.svg">
 						<p class="categories-item__text">History</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/watchlater.png">
+						<img class="categories-item__image" src="build/images/sidebar/watchlater.png" srcset="build/images/sidebar/watchlater.svg">
 						<p class="categories-item__text">Watch later</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/favourite.png">
+						<img class="categories-item__image" src="build/images/sidebar/favourite.png" srcset="build/images/sidebar/favourite.svg">
 						<p class="categories-item__text">Favourites</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/liked.png">
+						<img class="categories-item__image" src="build/images/sidebar/liked.png" srcset="build/images/sidebar/liked.svg">
 						<p class="categories-item__text">Liked videos</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/music.png">
+						<img class="categories-item__image" src="build/images/sidebar/music.png" srcset="build/images/sidebar/music.svg">
 						<p class="categories-item__text">Music</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/games.png">
+						<img class="categories-item__image" src="build/images/sidebar/games.png" srcset="build/images/sidebar/games.svg">
 						<p class="categories-item__text">Games</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
@@ -126,7 +126,7 @@
 				</div>										
 			</div>
 			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
+				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png" srcset="build/images/sidebar/settings.svg">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</nav>
@@ -145,7 +145,7 @@
 					</div>
 				</div>
 				<div class="content-header__subscribe content-subscribe">
-					<img class="content-subscribe__icon" src="build/images/bell.png">
+					<img class="content-subscribe__icon" src="build/images/bell.png" srcset="build/images/bell.svg">
 					<a class="button-regular">Subscribe 2.3m</a>
 				</div>
 			</div>
@@ -156,11 +156,11 @@
 							<li class="content-navigation__item nav-item nav-item_active"><a class="nav-item__link" href="home.html">Home</a></li>
 							<li class="content-navigation__item nav-item"><a class="nav-item__link" href="video.html">Videos</a></li>
 							<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Playlists</a></li>
-							<li class="content-navigation__item nav-item nav-item_more"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/rightArrow.png"></a></li>						
+							<li class="content-navigation__item nav-item nav-item_more"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/rightArrow.png" srcset="build/images/RightArrow.svg"></a></li>						
 							<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Channels</a></li>
 							<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Discussion</a></li>
 							<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">About</a></li>
-							<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/search.png"></a></li>
+							<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="build/images/search.png" srcset="build/images/search.svg"></a></li>
 						</ul>
 					</nav>
 					<div class="content-player player">
@@ -198,8 +198,8 @@
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
-							<span class="gallery-navigation__item"><img src="build/images/left.png"></span>
-							<span class="gallery-navigation__item"><img src="build/images/right.png"></span>
+							<span class="gallery-navigation__item"><img src="build/images/left.png" srcset="build/images/left.svg"></span>
+							<span class="gallery-navigation__item"><img src="build/images/right.png" srcset="build/images/right.svg"></span>
 						</div>						
 					</div>
 				</div>
