--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="header header-home">
 		<div class="menu">
-			<img src="build/images/burger.png">
+			<img src="build/images/burger.png" srcset="build/images/menu.svg">
 		</div>
 		<div class="logo">
 			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
@@ -21,24 +21,24 @@
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="build/images/search.png">
+			<div class="search-icon__wrap"></div>
 		</div>
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="build/images/camera.png">
+				<img src="build/images/camera.png" srcset="build/images/phone.svg">
 			</div>
 			<div class="top-navigation__item">
-				<img src="build/images/dots.png">
+				<img src="build/images/dots.png" srcset="build/images/combined.svg">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="build/images/bell.png">
+				<img src="build/images/bell.png" srcset="build/images/bell.svg">
 			</div>
 		</div>
 		<div class="header-content_right">
 			<div class="mobile-nav">
 				<div class="mobile-nav__item">
-					<img src="build/images/search-mobile.png">
+					<img src="build/images/search-mobile.png" srcset="build/images/search-mobile.svg">
 				</div>
 			</div>				
 			<div class="top-userpic">
@@ -51,43 +51,43 @@
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
-						<img class="categories-item__image" src="build/images/sidebar/home.png">
+						<img class="categories-item__image" src="build/images/sidebar/home.png" srcset="build/images/sidebar/home.svg">
 						<p class="categories-item__text">Home</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/trending.png">
+						<img class="categories-item__image" src="build/images/sidebar/trending.png" srcset="build/images/sidebar/trending.svg">
 						<p class="categories-item__text">Trending</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png">
+						<img class="categories-item__image" src="build/images/sidebar/subscriptions.png" srcset="build/images/sidebar/subscriptions.svg">
 						<p class="categories-item__text">Subscriptions</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/library.png">
+						<img class="categories-item__image" src="build/images/sidebar/library.png" srcset="build/images/sidebar/library.svg">
 						<p class="categories-item__text">Library</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/history.png">
+						<img class="categories-item__image" src="build/images/sidebar/history.png" srcset="build/images/sidebar/history.svg">
 						<p class="categories-item__text">History</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/watchlater.png">
+						<img class="categories-item__image" src="build/images/sidebar/watchlater.png" srcset="build/images/sidebar/watchlater.svg">
 						<p class="categories-item__text">Watch later</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/favourite.png">
+						<img class="categories-item__image" src="build/images/sidebar/favourite.png" srcset="build/images/sidebar/favourite.svg">
 						<p class="categories-item__text">Favourites</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/liked.png">
+						<img class="categories-item__image" src="build/images/sidebar/liked.png" srcset="build/images/sidebar/liked.svg">
 						<p class="categories-item__text">Liked videos</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/music.png">
+						<img class="categories-item__image" src="build/images/sidebar/music.png" srcset="build/images/sidebar/music.svg">
 						<p class="categories-item__text">Music</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="build/images/sidebar/games.png">
+						<img class="categories-item__image" src="build/images/sidebar/games.png" srcset="build/images/sidebar/games.svg">
 						<p class="categories-item__text">Games</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
@@ -121,10 +121,10 @@
 						<img class="subscriptions-item__image" src="build/images/sidebar/small-6.png" alt="Subscriptions item picture">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
-				</div>									
+				</div>										
 			</div>
 			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png">
+				<img class="sidebar-settings__image" src="build/images/sidebar/settings.png" srcset="build/images/sidebar/settings.svg">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</nav>
@@ -137,8 +137,8 @@
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
-							<span class="gallery-navigation__item"><img src="build/images/left.png"></span>
-							<span class="gallery-navigation__item"><img src="build/images/right.png"></span>
+							<span class="gallery-navigation__item"><img src="build/images/left.png" srcset="build/images/left.svg"></span>
+							<span class="gallery-navigation__item"><img src="build/images/right.png" srcset="build/images/right.svg"></span>
 						</div>						
 					</div>
 				</div>
@@ -275,8 +275,8 @@
 				<div class="gallery-header">
 					<h4 class="gallery-header__title">Recommended</h4>
 					<div class="gallery-navigation">
-						<span class="gallery-navigation__item"><img src="build/images/left.png"></span>
-						<span class="gallery-navigation__item"><img src="build/images/right.png"></span>
+						<span class="gallery-navigation__item"><img src="build/images/left.png" srcset="build/images/left.svg"></span>
+						<span class="gallery-navigation__item"><img src="build/images/right.png" srcset="build/images/right.svg"></span>
 					</div>
 				</div>
 				<div class="gallery-medium__wrapper">
@@ -372,8 +372,8 @@
 					<div class="gallery-header_right">
 						<a class="button-regular">Subscribe 2.3m</a>
 						<div class="gallery-navigation">
-							<span class="gallery-navigation__item" href=""><img src="build/images/left.png"></span>
-							<span class="gallery-navigation__item" href=""><img src="build/images/right.png"></span>
+							<span class="gallery-navigation__item"><img src="build/images/left.png" srcset="build/images/left.svg"></span>
+							<span class="gallery-navigation__item"><img src="build/images/right.png" srcset="build/images/right.svg"></span>
 						</div>						
 					</div>
 				</div>
