--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
 <body>
 	<header class="header header-video">
 		<div class="menu">
-			<img src="build/images/burger.png">
+			<img src="build/images/burger.png" srcset="build/images/menu.svg">
 		</div>
 		<div class="logo">
 			<img class="logo-button" src="build/images/ybutton.png" alt="Logo">
@@ -21,26 +21,26 @@
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
-			<img class="search-icon" src="build/images/search.png">
+			<div class="search-icon__wrap"></div>
 		</div>
 		<div class="mobile-nav">
 			<div class="mobile-nav__item">
-				<img src="build/images/search-mobile.png">
+				<img src="build/images/search-mobile.png" srcset="build/images/search-mobile.svg">
 			</div>
 			<div class="mobile-nav__item">
-				<img src="build/images/menu-mobile.png">
+				<img src="build/images/menu-mobile.png" srcset="build/images/menu-mobile.svg">
 			</div>
 		</div>		
 		<div class="top-navigation">
 			<div class="top-navigation__item">
-				<img src="build/images/camera.png">
+				<img src="build/images/camera.png" srcset="build/images/phone.svg">
 			</div>
 			<div class="top-navigation__item">
-				<img src="build/images/dots.png">
+				<img src="build/images/dots.png" srcset="build/images/combined.svg">
 			</div>
 			<div class="top-navigation__item">
 				<span class="top-navigation__alert">3</span>
-				<img src="build/images/bell.png">
+				<img src="build/images/bell.png" srcset="build/images/bell.svg">
 			</div>
 		</div>
 		<div class="top-userpic">
@@ -63,7 +63,7 @@
 					<div class="videoplayer-navigation__progress videoplayer-progress">
 						<div class="videoplayer-progress_left">
 							<div class="videoplayer-progress__control">
-								<img src="build/images/player/Pause small.png">
+								<img src="build/images/player/Pause small.png" srcset="build/images/player/pause-small.svg">
 							</div>
 							<span class="videoplayer-progress__time">1.34</span>
 						</div>
@@ -71,34 +71,34 @@
 						<div class="videoplayer-progress_right">
 							<span class="videoplayer-progress__time">19.00</span>
 							<div class="videoplayer-progress__control">
-								<img src="build/images/player/Volume small.png">
+								<img src="build/images/player/Volume small.png" srcset="build/images/player/volume-small.svg">
 							</div>
 						</div>
 					</div>
 					<div class="videoplayer-navigation__controls videoplayer-controls">
 						<div class="videoplayer-controls_left">
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Pause.png">
+								<img src="build/images/player/Pause.png" srcset="build/images/player/Pause.svg">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Next.png">
+								<img src="build/images/player/Next.png" srcset="build/images/player/Next.svg">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Volume.png">
+								<img src="build/images/player/Volume.png" srcset="build/images/player/Volume.svg">
 							</div>										
 						</div>
 						<div class="videoplayer-controls_right">
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Subtitles.png">
+								<img src="build/images/player/Subtitles.png" srcset="build/images/player/Subtitles.svg">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Settings.png">
+								<img src="build/images/player/Settings.png" srcset="build/images/player/Settings.svg">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Size.png">
+								<img src="build/images/player/Size.png" srcset="build/images/player/Size.svg">
 							</div>
 							<div class="videoplayer-controls__item">
-								<img src="build/images/player/Full Screen.png">
+								<img src="build/images/player/Full Screen.png" srcset="build/images/player/Full Screen.svg">
 							</div>															
 						</div>
 					</div>
@@ -114,20 +114,20 @@
 					<div class="videoplayer-navigation__wrapper">
 						<nav class="videoplayer-navigation__buttons videoplayer-buttons">
 							<span class="videoplayer-buttons__item video-button">
-								<img class="video-button__icon" src="build/images/thumb-up.png">
+								<img class="video-button__icon" src="build/images/thumb-up.png" srcset="build/images/thumbs-up.svg">
 								<span class="video-button__text">123k</span>
 							</span>
 							<span class="videoplayer-buttons__item video-button">
-								<img class="video-button__icon" src="build/images/thumb-down.png">
+								<img class="video-button__icon" src="build/images/thumb-down.png" srcset="build/images/thumbs-down.svg">
 								<span class="video-button__text">435k</span>
 							</span>
 							<span class="videoplayer-buttons__item video-button">
-								<img class="video-button__icon" src="build/images/share.png">
+								<img class="video-button__icon" src="build/images/share.png" srcset="build/images/fill.svg">
 								<span class="video-button__text">Share</span>
 							</span>												
 						</nav>
 						<span class="videoplayer-more">
-							<img src="build/images/more.png">
+							<img src="build/images/more.png" srcset="build/images/More.svg">
 						</span>						
 					</div>
 				</div>
