Implemented separate sidebar mobile menu instead or restyling original desktop version

--- a/home.html
+++ b/home.html
@@ -128,6 +128,24 @@
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</nav>
+		<nav class="sidebar-mobile">
+			<div class="sidebar-mobile__item mobile-item">
+				<img class="mobile-item__image" src="build/images/sidebar/home.png" srcset="build/images/sidebar/home.svg">
+				<p class="mobile-item__text">Home</p>
+			</div>
+			<div class="sidebar-mobile__item mobile-item">
+				<img class="mobile-item__image" src="build/images/sidebar/trending.png" srcset="build/images/sidebar/trending.svg">
+				<p class="mobile-item__text">Trending</p>
+			</div>
+			<div class="sidebar-mobile__item mobile-item">
+				<img class="mobile-item__image" src="build/images/sidebar/subscriptions.png" srcset="build/images/sidebar/subscriptions.svg">
+				<p class="mobile-item__text">Subscriptions</p>
+			</div>				
+			<div class="sidebar-mobile__item mobile-item">
+				<img class="mobile-item__image" src="build/images/sidebar/library.png" srcset="build/images/sidebar/library.svg">
+				<p class="mobile-item__text">Library</p>
+			</div>
+		</nav>		
 		<div class="content content_full">
 			<div class="gallery-small">
 				<div class="gallery-header">
