Fixed markup styling on desktop version according to mockup

--- a/channel.html
+++ b/channel.html
@@ -189,7 +189,7 @@
 						<div class="content-player__description player-description">
 							<h6 class="player-description__title player-title">Choosing The Best Audio Player Software For Your Computer</h6>
 							<p class="player-description__text player-text">Your cheap internet-based banner advertising will become one of the sought for ads there are. Today, the world of Internet advertising is rapidly evolving beyond banner ads and intrusive pop-ups. Bayles A common medium for advertising on the Internet is the use of banner ads.</p>
-							<p class="player-description__info player-info">11k views 6 month ago</p>
+							<p class="player-description__info player-info"><span>11k views</span><span class="divider">.</span><span>6 month ago</span></p>
 						</div>
 					</div>					
 				</div>
