--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="main">
+	<section class="main main-home">
 		<nav class="sidebar">
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
