Fixed styling for gallery-header, main page header, nav links in gallery

--- a/channel.html
+++ b/channel.html
@@ -48,7 +48,7 @@
 			<img src="build/images/Userpic.png">
 		</div>
 	</header>
-	<section class="main">
+	<section class="main main-channel">
 		<nav class="sidebar">
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
@@ -212,7 +212,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<h4 class="gallery-header__title">Margaret Phelps videos</h4>					
+						<h4 class="gallery-header__title gallery-header__title_padded">Margaret Phelps videos</h4>					
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
