--- a/home.html
+++ b/home.html
@@ -384,8 +384,10 @@
 				<div class="gallery-header">
 					<div class="gallery-header_left">
 						<img class="gallery-header__image gallery-img_small" src="build/images/videoplayer-img.png" alt="Gallery image">
-						<h4 class="gallery-header__title">Food & drink</h4>
-						<p class="gallery-header__text">Recommended channel for you</p>						
+						<div class="gallery-header__wrap">
+							<h4 class="gallery-header__title">Food & drink</h4>
+							<p class="gallery-header__text">Recommended channel for you</p>								
+						</div>				
 					</div>
 					<div class="gallery-header_right">
 						<a class="button-regular">Subscribe 2.3m</a>
