--- a/channel.html
+++ b/channel.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="build/css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;800&display=swap" rel="stylesheet">	
 </head>
 <body>
 	<header class="header header-channel">
@@ -205,7 +205,7 @@
 					</div>
 					<div class="recommended__item recommended-item">
 						<img class="recommended-item__image" src="build/images/recommended/medium-3.png" class="Recommended item picture">
-						<p class="recommended-item__name">Philip Mulins</p>
+						<p class="recommended-item__name">Phillip Mullins</p>
 					</div>										
 				</nav>
 			</div>
