Implemented scrollbar for videoplayer playlist element, made use of rel attribute for recommended componenent, reallocated all toggle component styling to one module

--- a/channel.html
+++ b/channel.html
@@ -195,18 +195,18 @@
 				</div>
 				<nav class="content-main__recommended recommended">
 					<h6 class="recommended__title">Recommended channels</h6>
-					<div class="recommended__item recommended-item">
+					<a class="recommended__item recommended-item" rel="author">
 						<img class="recommended-item__image" src="build/images/recommended/medium-1.png" class="Recommended item picture">
 						<p class="recommended-item__name">Flora Benson</p>
-					</div>
-					<div class="recommended__item recommended-item">
+					</a>
+					<a class="recommended__item recommended-item" rel="author">
 						<img class="recommended-item__image" src="build/images/recommended/medium-2.png" class="Recommended item picture">
 						<p class="recommended-item__name">Violet Cobb</p>
-					</div>
-					<div class="recommended__item recommended-item">
+					</a>
+					<a class="recommended__item recommended-item" rel="author">
 						<img class="recommended-item__image" src="build/images/recommended/medium-3.png" class="Recommended item picture">
 						<p class="recommended-item__name">Phillip Mullins</p>
-					</div>										
+					</a>										
 				</nav>
 			</div>
 			<div class="gallery-small">
