--- a/video.html
+++ b/video.html
@@ -191,6 +191,25 @@
 			</div>
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="build/images/video/playlist-1.png" alt="Playlist image 1">
+					<span class="playlist-item__duration">8.00</span>
+				</div>
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
+				</div>
+			</div>
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="build/images/video/playlist-2.png" alt="Playlist image 2">
+					<span class="playlist-item__duration">8.00</span>
+				</div>
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">A Good Autoresponder</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
+				</div>			
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
 					<img class="playlist-image__item" src="build/images/video/playlist-4.png" alt="Playlist image 1">
 					<span class="playlist-item__duration">8.00</span>
 				</div>
